--- a/app/views/apartments/index.html.erb
+++ b/app/views/apartments/index.html.erb
@@ -1,35 +1,72 @@
-<table class="table table-striped col-md-12" id="apartments">
-    <thead>
-        <tr>
-        <th>Address</th>
-        <th>Monthly Rent</th>
-        <th>Number of Bedrooms</th>
-        <th>Number of Bathrooms</th>
-        <th>Sq. Feet</th>
-        <th>URL</th>
-        </tr>
-    </thead>
-    <tbody>
-        <% @apartments.each do |apartment| %>
-        <tr>
-            <td>
-            <%= apartment.address %>
-            </td>
-            <td><%= apartment.mo_rent %></td>
-            <td>
-            <%= apartment.num_beds %>
-            </td>
-            <td>
-            <%= apartment.num_baths %>
-            </td>
-            <td>
-            <%= apartment.sq_ft %>
-            </td>
-            <td>
-            <%= link_to "Link", apartment.url %>
-            </td>
-        </tr>
-        <% end %>
-    </tbody>
-</table>
-
+<div class="container mx-auto px-4 sm:px-8">
+    <div class="py-8">
+        <div>
+            <h2 class="text-2xl font-semibold leading-tight">Apartments</h2>
+        </div>
+        <div class="-mx-4 sm:-mx-8 px-4 sm:px-8 py-4 overflow-x-auto">
+            <div class="inline-block min-w-full shadow rounded-lg overflow-hidden">
+                <table class="min-w-full leading-normal">
+                    <thead>
+                        <tr>
+                            <th
+                                class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-center text-xs font-semibold text-gray-600 uppercase tracking-wider">
+                                Address
+                            </th>
+                            <th
+                                class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-center text-xs font-semibold text-gray-600 uppercase tracking-wider">
+                                Monthly Rent
+                            </th>
+                            <th
+                                class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-center text-xs font-semibold text-gray-600 uppercase tracking-wider">
+                                Bedrooms
+                            </th>
+                            <th
+                                class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-center text-xs font-semibold text-gray-600 uppercase tracking-wider">
+                                Bathrooms
+                            </th>
+                            <th
+                                class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-center text-xs font-semibold text-gray-600 uppercase tracking-wider">
+                                Sq. Ft
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <% @apartments.each do |apartment| %>
+                            <tr>
+                                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm w-2/5">
+                                    <div class="flex items-center">
+                                        <div class="ml-3">
+                                            <p class="text-gray-900 whitespace-no-wrap">
+                                                <%= link_to "#{apartment.address}", apartment.url %>
+                                            </p>
+                                        </div>
+                                    </div>
+                                </td>
+                                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">
+                                    <p class="text-gray-900 whitespace-no-wrap text-center">
+                                        <%= apartment.mo_rent %>
+                                    </p>
+                                </td>
+                                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">
+                                    <p class="text-gray-900 whitespace-no-wrap text-center">
+                                        <%= apartment.num_beds %>
+                                    </p>
+                                </td>
+                                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">
+                                    <p class="text-gray-900 whitespace-no-wrap text-center">
+                                        <%= apartment.num_baths %>
+                                    </p>
+                                </td>
+                                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">
+                                    <p class="text-gray-900 whitespace-no-wrap text-center">
+                                        <%= apartment.sq_ft %>
+                                    </p>
+                                </td>
+                            </tr>
+                        <% end %>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
