--- a/app/views/apartments/index.html.erb
+++ b/app/views/apartments/index.html.erb
@@ -1,3 +1,14 @@
+<head>
+    <style>
+        .modal {
+            transition: opacity 0.25s ease;
+        }
+        body.modal-active {
+            overflow-x: hidden;
+            overflow-y: visible !important;
+        }
+    </style>
+</head>
 <div class="container mx-auto px-4 sm:px-8">
     <div class="py-8">
         <div>
@@ -68,5 +79,112 @@
                 </table>
             </div>
         </div>
+        <button class="modal-open bg-transparent border border-gray-500 hover:border-indigo-500 text-gray-500 hover:text-indigo-500 font-bold py-2 px-4 rounded-full">Add Apartment</button>
+        <!--Modal-->
+        <div class="modal opacity-0 pointer-events-none fixed w-full h-full top-0 left-0 flex items-center justify-center">
+            <div class="modal-overlay absolute w-full h-full bg-gray-900 opacity-50"></div>
+    
+            <div class="modal-container bg-white w-11/12 md:max-w-md mx-auto rounded shadow-lg z-50 overflow-y-auto">
+            
+            <div class="modal-close absolute top-0 right-0 cursor-pointer flex flex-col items-center mt-4 mr-4 text-white text-sm z-50">
+                <svg class="fill-current text-white" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18">
+                <path d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z"></path>
+                </svg>
+                <span class="text-sm">(Esc)</span>
+            </div>
+
+            <!-- Add margin if you want to see some of the overlay behind the modal-->
+            <div class="modal-content py-4 text-left px-6">
+                <!--Title-->
+                <div class="flex justify-between items-center pb-3">
+                <p class="py-6 text-2xl font-bold">Add Apartment</p>
+                <div class="modal-close cursor-pointer z-50">
+                    <svg class="fill-current text-black" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18">
+                    <path d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z"></path>
+                    </svg>
+                </div>
+                </div>
+
+                <!--Body-->
+                <form class="mb-6" action="/apartments" method="post">
+                    <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+                    <div class="flex flex-col mb-4">
+                        <label class="mb-2 font-bold text-lg text-grey-darkest" for="address">Address</label>
+                        <input class="border py-2 px-3 text-grey-darkest" type="text" name="apartment[address]" id="address">
+                    </div>
+                    <div class="flex flex-row justify-between">
+                        <div class="flex flex-col mb-4">
+                            <label class="mb-2 font-bold text-lg text-grey-darkest" for="mo_rent">Monthly Rent</label>
+                            <input class="border py-2 px-3 text-grey-darkest" type="text" name="apartment[mo_rent]" id="mo_rent">
+                        </div>
+                        <div class="flex flex-col mb-4">
+                            <label class="mb-2 font-bold text-lg text-grey-darkest" for="sq_ft">Sq. Ft</label>
+                            <input class="border py-2 px-3 text-grey-darkest" type="text" name="apartment[sq_ft]" id="sq_ft">
+                        </div>
+                    </div>
+                    <div class="flex flex-row justify-between">
+                        <div class="flex flex-col mb-4">
+                            <label class="mb-2 font-bold text-lg text-grey-darkest" for="num_beds">Bedrooms</label>
+                            <input class="border py-2 px-3 text-grey-darkest" type="text" name="apartment[num_beds]" id="num_beds">
+                        </div>
+                        <div class="flex flex-col mb-4">
+                            <label class="mb-2 font-bold text-lg text-grey-darkest" for="num_baths">Bathrooms</label>
+                            <input class="border py-2 px-3 text-grey-darkest" type="text" name="apartment[num_baths]" id="num_baths">
+                        </div>
+                    </div>
+                    <div class="flex flex-col mb-4">
+                        <label class="mb-2 font-bold text-lg text-grey-darkest" for="url">URL</label>
+                        <input class="border py-2 px-3 text-grey-darkest" type="text" name="apartment[url]" id="url">
+                    </div>
+                    <div class="flex justify-end pt-2">
+                        <button class="px-4 bg-indigo-500 p-3 rounded-lg text-white hover:bg-indigo-400 mr-2" type="submit">Add</button>
+                        <button class="modal-close px-4 bg-transparent p-3 rounded-lg text-indigo-500 hover:bg-gray-100 hover:text-indigo-400">Close</button>
+                    </div>
+                </form>
+            </div>
+            </div>
+        </div>
+
+        <script>
+            var openmodal = document.querySelectorAll('.modal-open')
+            for (var i = 0; i < openmodal.length; i++) {
+            openmodal[i].addEventListener('click', function(event){
+                event.preventDefault()
+                toggleModal()
+            })
+            }
+            
+            const overlay = document.querySelector('.modal-overlay')
+            overlay.addEventListener('click', toggleModal)
+            
+            var closemodal = document.querySelectorAll('.modal-close')
+            for (var i = 0; i < closemodal.length; i++) {
+            closemodal[i].addEventListener('click', toggleModal)
+            }
+            
+            document.onkeydown = function(evt) {
+            evt = evt || window.event
+            var isEscape = false
+            if ("key" in evt) {
+                isEscape = (evt.key === "Escape" || evt.key === "Esc")
+            } else {
+                isEscape = (evt.keyCode === 27)
+            }
+            if (isEscape && document.body.classList.contains('modal-active')) {
+                toggleModal()
+            }
+            };
+            
+            
+            function toggleModal () {
+            const body = document.querySelector('body')
+            const modal = document.querySelector('.modal')
+            modal.classList.toggle('opacity-0')
+            modal.classList.toggle('pointer-events-none')
+            body.classList.toggle('modal-active')
+            }
+            
+        </script>
     </div>
 </div>
+
