added create + access panels

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="bg-white">
-    <nav class="border-b border-gray-100">
+    <nav class="border-b">
         <div class="max-w-screen-2xl mx-auto px-8 py-4">
             <div class="flex items-center space-x-2">
                 <img class="h-8 w-auto" src="images/logo-buildings.svg" alt="Buildings">
@@ -8,7 +8,7 @@
         </div>
     </nav>
 
-    <div class="grid grid-cols-1 gap-4 max-w-screen-2xl mx-auto px-8 py-4">
+    <div class="grid grid-cols-1 gap-4 max-w-screen-2xl mx-auto px-8 pt-4 pb-8">
         <div class="rounded-md border p-8">
             <p class="inline-block font-medium text-sm text-green-700 bg-green-100 rounded-md px-2 py-1 mb-4">
                 Starting your apartment search?
@@ -16,9 +16,11 @@
             <h1 class="text-xl font-bold mb-1">
                 Create a group.
             </h1>
-            <p class="text-gray-400">
-                Pick a unique name that can be accessed publicly by people in your group.
+            <p class="text-gray-400 mb-4">
+                Pick a name that can be accessed publicly by people in your group.
             </p>
+            <input class="w-full border rounded-md px-3 py-3 placeholder-gray-400 shadow-sm focus:outline-none focus:border-green-500 focus:ring-green-500 mb-4" placeholder="i.e. nycbuds2021">
+            <button type="submit" class="block w-full rounded-md border border-transparent px-3 py-3 bg-green-600 text-base font-medium text-white shadow hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2">Create group</button>
         </div>
         <div class="rounded-md border p-8">
             <p class="inline-block font-medium text-sm text-blue-700 bg-blue-100 rounded-md px-2 py-1 mb-4">
@@ -27,9 +29,11 @@
             <h1 class="text-xl font-bold mb-1">
                 Access your group apartments.
             </h1>
-            <p class="text-gray-400">
-                Enter in the unique group name you created to view an edit your existing apartments.
+            <p class="text-gray-400 mb-4">
+                Enter in the unique group name you created to view and edit your existing apartments.
             </p>
+            <input class="w-full border rounded-md px-3 py-3 placeholder-gray-400 shadow-sm focus:outline-none focus:border-blue-500 focus:ring-blue-500 mb-4" placeholder="i.e. nycbuds2021">
+            <button type="submit" class="block w-full rounded-md border border-transparent px-3 py-3 bg-blue-600 text-base font-medium text-white shadow hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2">Access group</button>
         </div>
     </div>
 </div>
