--- a/app/views/apartments/index.html.erb
+++ b/app/views/apartments/index.html.erb
@@ -1,190 +1,94 @@
-<head>
-    <style>
-        .modal {
-            transition: opacity 0.25s ease;
-        }
-        body.modal-active {
-            overflow-x: hidden;
-            overflow-y: visible !important;
-        }
-    </style>
-</head>
-<div class="container mx-auto px-4 sm:px-8">
-    <div class="py-8">
-        <div>
-            <h2 class="text-2xl font-semibold leading-tight">Apartments</h2>
+<div class="bg-white">
+    <nav class="border-b">
+        <div class="max-w-screen-2xl mx-auto px-8 py-4">
+            <div class="flex items-center space-x-2">
+                <img class="h-8 w-auto" src="images/logo-buildings.svg" alt="Buildings">
+                <img class="h-5 w-auto" src="images/logo-nooks.svg" alt="Nooks">
+            </div>  
         </div>
-        <div class="-mx-4 sm:-mx-8 px-4 sm:px-8 py-4 overflow-x-auto">
-            <div class="inline-block min-w-full shadow rounded-lg overflow-hidden">
-                <table class="min-w-full leading-normal">
-                    <thead>
+    </nav>
+
+    <div class="space-y-8 p-8">
+    
+        <div class="flex flex-col sm:flex-row max-w-screen-2xl sm:space-x-8 mx-auto">
+            <div class="flex justify-between items-center sm:w-1/2 rounded-md border border-gray-200 bg-gray-100 hover:bg-gray-200 text-gray-700 p-4 mb-8 sm:m-0">
+                <h1 class="text-lg font-bold">
+                    nycbuds2021
+                </h1>
+                <svg class="h-5 w-5 text-gray-700" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+                    <path fill-rule="evenodd" d="M12.586 4.586a2 2 0 112.828 2.828l-3 3a2 2 0 01-2.828 0 1 1 0 00-1.414 1.414 4 4 0 005.656 0l3-3a4 4 0 00-5.656-5.656l-1.5 1.5a1 1 0 101.414 1.414l1.5-1.5zm-5 5a2 2 0 012.828 0 1 1 0 101.414-1.414 4 4 0 00-5.656 0l-3 3a4 4 0 105.656 5.656l1.5-1.5a1 1 0 10-1.414-1.414l-1.5 1.5a2 2 0 11-2.828-2.828l3-3z" clip-rule="evenodd" />
+                </svg>
+            </div>
+            <div class="flex justify-between items-center sm:w-1/2 rounded-md border border-blue-200 bg-blue-100 hover:bg-blue-200 text-blue-700 p-4">
+                <h1 class="text-lg font-bold">
+                    Add Apartment
+                </h1>
+                <svg class="h-6 w-6 text-blue-700" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+                    <path fill-rule="evenodd" d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z" clip-rule="evenodd" />
+                </svg>
+            </div>
+        </div>
+
+        <div class="flex flex-col max-w-screen-2xl mx-auto">
+            <div class="overflow-x-auto rounded-md border">
+                <table class="table-fixed min-w-full divide-y divide-gray-200">
+                    <thead class="bg-gray-50">
                         <tr>
-                            <th
-                                class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-center text-xs font-semibold text-gray-600 uppercase tracking-wider">
-                                Address
+                            <th scope="col" class="w-3/12 p-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                Apartment
                             </th>
-                            <th
-                                class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-center text-xs font-semibold text-gray-600 uppercase tracking-wider">
-                                Monthly Rent
+                            <th scope="col" class="w-2/12 p-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                Rent
                             </th>
-                            <th
-                                class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-center text-xs font-semibold text-gray-600 uppercase tracking-wider">
-                                Bedrooms
+                            <th scope="col" class="w-2/12 p-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                Beds
                             </th>
-                            <th
-                                class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-center text-xs font-semibold text-gray-600 uppercase tracking-wider">
-                                Bathrooms
+                            <th scope="col" class=" w-2/12 p-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                Baths
                             </th>
-                            <th
-                                class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-center text-xs font-semibold text-gray-600 uppercase tracking-wider">
-                                Sq. Ft
+                            <th scope="col" class=" w-2/12 p-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                Sq Ft
+                            </th>
+                            <th scope="col" class="w-1/12 p-4">
+                                <span class="sr-only">Edit</span>
                             </th>
                         </tr>
                     </thead>
-                    <tbody>
-                        <% @apartments.each do |apartment| %>
-                            <tr>
-                                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm w-2/5">
-                                    <div class="flex items-center">
-                                        <div class="ml-3">
-                                            <p class="text-gray-900 whitespace-no-wrap">
-                                                <%= link_to "#{apartment.address}", apartment.url %>
-                                            </p>
-                                        </div>
-                                    </div>
-                                </td>
-                                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">
-                                    <p class="text-gray-900 whitespace-no-wrap text-center">
-                                        <%= apartment.mo_rent %>
-                                    </p>
-                                </td>
-                                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">
-                                    <p class="text-gray-900 whitespace-no-wrap text-center">
-                                        <%= apartment.num_beds %>
-                                    </p>
-                                </td>
-                                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">
-                                    <p class="text-gray-900 whitespace-no-wrap text-center">
-                                        <%= apartment.num_baths %>
-                                    </p>
-                                </td>
-                                <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">
-                                    <p class="text-gray-900 whitespace-no-wrap text-center">
-                                        <%= apartment.sq_ft %>
-                                    </p>
-                                </td>
-                            </tr>
-                        <% end %>
+                    <tbody class="divide-y divide-gray-200">
+
+                    <% @apartments.each do |apartment| %>
+                        <tr>
+                            <td class="px-4 py-8 whitespace-nowrap text-sm font-medium text-gray-900">
+                                <p class="inline-block font-medium text-sm text-gray-900 bg-gray-100 rounded-md px-2 py-1">
+                                    <%= link_to "#{apartment.address}", apartment.url %>
+                                </p>
+                            </td>
+                            <td class="px-4 py-8 whitespace-nowrap text-sm text-gray-500">
+                                <p class="inline-block font-medium text-sm text-green-700 bg-green-100 rounded-md px-2 py-1">
+                                    $<%= apartment.mo_rent.round %>
+                                </p>
+                            </td>
+                            <td class="px-4 py-8 whitespace-nowrap text-sm text-gray-500">
+                                <%= apartment.num_beds %>
+                            </td>
+                            <td class="px-4 py-8 whitespace-nowrap text-sm text-gray-500">
+                                <%= apartment.num_baths %>
+                            </td>
+                            <td class="px-4 py-8 whitespace-nowrap text-sm text-gray-500">
+                                <%= apartment.sq_ft %>
+                            </td>
+                            <td class="px-4 py-8 whitespace-nowrap text-sm font-medium">
+                                <a href="#" class="text-blue-700 hover:text-blue-900">Edit</a>
+                            </td>
+                        </tr>
+                    <% end %>
+
                     </tbody>
                 </table>
             </div>
         </div>
-        <button class="modal-open bg-transparent border border-gray-500 hover:border-indigo-500 text-gray-500 hover:text-indigo-500 font-bold py-2 px-4 rounded-full">Add Apartment</button>
-        <!--Modal-->
-        <div class="modal opacity-0 pointer-events-none fixed w-full h-full top-0 left-0 flex items-center justify-center">
-            <div class="modal-overlay absolute w-full h-full bg-gray-900 opacity-50"></div>
-    
-            <div class="modal-container bg-white w-11/12 md:max-w-md mx-auto rounded shadow-lg z-50 overflow-y-auto">
-            
-            <div class="modal-close absolute top-0 right-0 cursor-pointer flex flex-col items-center mt-4 mr-4 text-white text-sm z-50">
-                <svg class="fill-current text-white" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18">
-                <path d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z"></path>
-                </svg>
-                <span class="text-sm">(Esc)</span>
-            </div>
 
-            <!-- Add margin if you want to see some of the overlay behind the modal-->
-            <div class="modal-content py-4 text-left px-6">
-                <!--Title-->
-                <div class="flex justify-between items-center pb-3">
-                <p class="py-6 text-2xl font-bold">Add Apartment</p>
-                <div class="modal-close cursor-pointer z-50">
-                    <svg class="fill-current text-black" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18">
-                    <path d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z"></path>
-                    </svg>
-                </div>
-                </div>
-
-                <!--Body-->
-                <form class="mb-6" action="/apartments" method="post">
-                    <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
-                    <div class="flex flex-col mb-4">
-                        <label class="mb-2 font-bold text-lg text-grey-darkest" for="address">Address</label>
-                        <input class="border py-2 px-3 text-grey-darkest" type="text" name="apartment[address]" id="address">
-                    </div>
-                    <div class="flex flex-row justify-between">
-                        <div class="flex flex-col mb-4">
-                            <label class="mb-2 font-bold text-lg text-grey-darkest" for="mo_rent">Monthly Rent</label>
-                            <input class="border py-2 px-3 text-grey-darkest" type="text" name="apartment[mo_rent]" id="mo_rent">
-                        </div>
-                        <div class="flex flex-col mb-4">
-                            <label class="mb-2 font-bold text-lg text-grey-darkest" for="sq_ft">Sq. Ft</label>
-                            <input class="border py-2 px-3 text-grey-darkest" type="text" name="apartment[sq_ft]" id="sq_ft">
-                        </div>
-                    </div>
-                    <div class="flex flex-row justify-between">
-                        <div class="flex flex-col mb-4">
-                            <label class="mb-2 font-bold text-lg text-grey-darkest" for="num_beds">Bedrooms</label>
-                            <input class="border py-2 px-3 text-grey-darkest" type="text" name="apartment[num_beds]" id="num_beds">
-                        </div>
-                        <div class="flex flex-col mb-4">
-                            <label class="mb-2 font-bold text-lg text-grey-darkest" for="num_baths">Bathrooms</label>
-                            <input class="border py-2 px-3 text-grey-darkest" type="text" name="apartment[num_baths]" id="num_baths">
-                        </div>
-                    </div>
-                    <div class="flex flex-col mb-4">
-                        <label class="mb-2 font-bold text-lg text-grey-darkest" for="url">URL</label>
-                        <input class="border py-2 px-3 text-grey-darkest" type="text" name="apartment[url]" id="url">
-                    </div>
-                    <div class="flex justify-end pt-2">
-                        <button class="px-4 bg-indigo-500 p-3 rounded-lg text-white hover:bg-indigo-400 mr-2" type="submit">Add</button>
-                        <button class="modal-close px-4 bg-transparent p-3 rounded-lg text-indigo-500 hover:bg-gray-100 hover:text-indigo-400">Close</button>
-                    </div>
-                </form>
-            </div>
-            </div>
-        </div>
-
-        <script>
-            var openmodal = document.querySelectorAll('.modal-open')
-            for (var i = 0; i < openmodal.length; i++) {
-            openmodal[i].addEventListener('click', function(event){
-                event.preventDefault()
-                toggleModal()
-            })
-            }
-            
-            const overlay = document.querySelector('.modal-overlay')
-            overlay.addEventListener('click', toggleModal)
-            
-            var closemodal = document.querySelectorAll('.modal-close')
-            for (var i = 0; i < closemodal.length; i++) {
-            closemodal[i].addEventListener('click', toggleModal)
-            }
-            
-            document.onkeydown = function(evt) {
-            evt = evt || window.event
-            var isEscape = false
-            if ("key" in evt) {
-                isEscape = (evt.key === "Escape" || evt.key === "Esc")
-            } else {
-                isEscape = (evt.keyCode === 27)
-            }
-            if (isEscape && document.body.classList.contains('modal-active')) {
-                toggleModal()
-            }
-            };
-            
-            
-            function toggleModal () {
-            const body = document.querySelector('body')
-            const modal = document.querySelector('.modal')
-            modal.classList.toggle('opacity-0')
-            modal.classList.toggle('pointer-events-none')
-            body.classList.toggle('modal-active')
-            }
-            
-        </script>
     </div>
-</div>
 
+
+</div>
