--- a/app/views/apartments/index.html.erb
+++ b/app/views/apartments/index.html.erb
@@ -11,7 +11,7 @@
     <div class="space-y-8 p-8">
     
         <div class="flex flex-col sm:flex-row max-w-screen-2xl sm:space-x-8 mx-auto">
-            <div class="flex justify-between items-center sm:w-1/2 rounded-md border border-gray-200 bg-gray-100 hover:bg-gray-200 text-gray-700 p-4 mb-8 sm:m-0">
+            <div class="flex justify-between items-center sm:w-1/2 rounded-md border border-gray-200 bg-gray-50 hover:bg-gray-100 text-gray-700 p-4 mb-8 sm:m-0">
                 <h1 class="text-lg font-bold">
                     nycbuds2021
                 </h1>
@@ -19,7 +19,7 @@
                     <path fill-rule="evenodd" d="M12.586 4.586a2 2 0 112.828 2.828l-3 3a2 2 0 01-2.828 0 1 1 0 00-1.414 1.414 4 4 0 005.656 0l3-3a4 4 0 00-5.656-5.656l-1.5 1.5a1 1 0 101.414 1.414l1.5-1.5zm-5 5a2 2 0 012.828 0 1 1 0 101.414-1.414 4 4 0 00-5.656 0l-3 3a4 4 0 105.656 5.656l1.5-1.5a1 1 0 10-1.414-1.414l-1.5 1.5a2 2 0 11-2.828-2.828l3-3z" clip-rule="evenodd" />
                 </svg>
             </div>
-            <div class="flex justify-between items-center sm:w-1/2 rounded-md border border-blue-200 bg-blue-100 hover:bg-blue-200 text-blue-700 p-4">
+            <div class="flex justify-between items-center sm:w-1/2 rounded-md border border-blue-200 bg-blue-50 hover:bg-blue-100 text-blue-700 p-4">
                 <h1 class="text-lg font-bold">
                     Add Apartment
                 </h1>
@@ -34,19 +34,19 @@
                 <table class="table-fixed min-w-full divide-y divide-gray-200">
                     <thead class="bg-gray-50">
                         <tr>
-                            <th scope="col" class="w-3/12 p-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                            <th scope="col" class="w-3/12 p-4 text-center text-xs font-medium text-gray-500 uppercase tracking-wider">
                                 Apartment
                             </th>
-                            <th scope="col" class="w-2/12 p-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                            <th scope="col" class="w-2/12 p-4 text-center text-xs font-medium text-gray-500 uppercase tracking-wider">
                                 Rent
                             </th>
-                            <th scope="col" class="w-2/12 p-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                            <th scope="col" class="w-2/12 p-4 text-center text-xs font-medium text-gray-500 uppercase tracking-wider">
                                 Beds
                             </th>
-                            <th scope="col" class=" w-2/12 p-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                            <th scope="col" class=" w-2/12 p-4 text-center text-xs font-medium text-gray-500 uppercase tracking-wider">
                                 Baths
                             </th>
-                            <th scope="col" class=" w-2/12 p-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                            <th scope="col" class=" w-2/12 p-4 text-center text-xs font-medium text-gray-500 uppercase tracking-wider">
                                 Sq Ft
                             </th>
                             <th scope="col" class="w-1/12 p-4">
@@ -58,26 +58,26 @@
 
                     <% @apartments.each do |apartment| %>
                         <tr>
-                            <td class="px-4 py-8 whitespace-nowrap text-sm font-medium text-gray-900">
+                            <td class="px-4 py-8 whitespace-nowrap text-sm font-medium text-gray-900 text-center">
                                 <p class="inline-block font-medium text-sm text-gray-900 bg-gray-100 rounded-md px-2 py-1">
                                     <%= link_to "#{apartment.address}", apartment.url %>
                                 </p>
                             </td>
-                            <td class="px-4 py-8 whitespace-nowrap text-sm text-gray-500">
+                            <td class="px-4 py-8 whitespace-nowrap text-sm text-gray-500 text-center">
                                 <p class="inline-block font-medium text-sm text-green-700 bg-green-100 rounded-md px-2 py-1">
                                     $<%= apartment.mo_rent.round %>
                                 </p>
                             </td>
-                            <td class="px-4 py-8 whitespace-nowrap text-sm text-gray-500">
+                            <td class="px-4 py-8 whitespace-nowrap text-sm text-gray-500 text-center">
                                 <%= apartment.num_beds %>
                             </td>
-                            <td class="px-4 py-8 whitespace-nowrap text-sm text-gray-500">
+                            <td class="px-4 py-8 whitespace-nowrap text-sm text-gray-500 text-center">
                                 <%= apartment.num_baths %>
                             </td>
-                            <td class="px-4 py-8 whitespace-nowrap text-sm text-gray-500">
+                            <td class="px-4 py-8 whitespace-nowrap text-sm text-gray-500 text-center">
                                 <%= apartment.sq_ft %>
                             </td>
-                            <td class="px-4 py-8 whitespace-nowrap text-sm font-medium">
+                            <td class="px-4 py-8 whitespace-nowrap text-sm font-medium text-center">
                                 <a href="#" class="text-blue-700 hover:text-blue-900">Edit</a>
                             </td>
                         </tr>
