--- a/app/views/apartments/index.html.erb
+++ b/app/views/apartments/index.html.erb
@@ -7,13 +7,11 @@
             </div>  
         </div>
     </nav>
-
     <div class="space-y-8 p-8">
-    
         <div class="flex flex-col sm:flex-row max-w-screen-2xl sm:space-x-8 mx-auto">
             <div class="flex justify-between items-center sm:w-1/2 rounded-md border border-gray-200 bg-gray-50 hover:bg-gray-100 text-gray-700 p-4 mb-8 sm:m-0">
                 <h1 class="text-lg font-bold">
-                    nycbuds2021
+                    <%= @group.name %>
                 </h1>
                 <svg class="h-5 w-5 text-gray-700" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
                     <path fill-rule="evenodd" d="M12.586 4.586a2 2 0 112.828 2.828l-3 3a2 2 0 01-2.828 0 1 1 0 00-1.414 1.414 4 4 0 005.656 0l3-3a4 4 0 00-5.656-5.656l-1.5 1.5a1 1 0 101.414 1.414l1.5-1.5zm-5 5a2 2 0 012.828 0 1 1 0 101.414-1.414 4 4 0 00-5.656 0l-3 3a4 4 0 105.656 5.656l1.5-1.5a1 1 0 10-1.414-1.414l-1.5 1.5a2 2 0 11-2.828-2.828l3-3z" clip-rule="evenodd" />
@@ -28,7 +26,6 @@
                 </svg>
             </div>
         </div>
-
         <div class="flex flex-col max-w-screen-2xl mx-auto">
             <div class="overflow-x-auto rounded-md border">
                 <table class="table-fixed min-w-full divide-y divide-gray-200">
@@ -82,7 +79,6 @@
                             </td>
                         </tr>
                     <% end %>
-
                     </tbody>
                 </table>
             </div>
