--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,17 @@
   </head>
 
   <body>
+  
+    <nav class="border-b">
+      <div class="max-w-screen-2xl mx-auto px-8 py-4">
+        <div class="flex items-center space-x-2">
+          <%= image_tag "logo-buildings.svg", :class => "h-8 w-auto" %>
+          <%= image_tag "logo-nooks.svg", :class => "h-5 w-auto" %>
+        </div>  
+      </div>
+    </nav>
+
     <%= yield %>
+
   </body>
 </html>
