--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,7 +13,7 @@
             <form action="/groups" id="new_group" method="post">
                 <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
                 <div class="sm:flex md:block">
-                    <input class="w-full border rounded-md px-3 py-3 placeholder-gray-400 shadow-sm focus:outline-none focus:border-green-500 focus:ring-green-500 mb-4 sm:mb-0 md:mb-4" placeholder="i.e. nycbuds2021" id="group_name" name="group[name]">
+                    <input class="w-full border rounded-md px-3 py-3 placeholder-gray-400 shadow-sm focus:outline-none focus:border-green-500 focus:ring-green-500 mb-4 sm:mb-0 md:mb-4" placeholder="i.e. nycbuds2021" id="groupc_name" name="group[name]">
                     <button class="min-w-max flex-1 block w-full rounded-md border border-transparent px-12 py-3 bg-green-600 text-base font-medium text-white shadow hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2 sm:ml-4 md:ml-0" type="submit">Create group</button>
                 </div>
             </form>
